human-intervention-logs/org.assertj:assertj-core:3.22.0/gradle-test/gradle-test-2026-05-12T23-44-02-966833Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: org.assertj:assertj-core:3.22.0
Command: `/home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2161-4315e9d8/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 9 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes UP-TO-DATE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :tck-test-support:jar UP-TO-DATE
> Task :jar UP-TO-DATE

> Task :compileTestJava FAILED
/home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2161-4315e9d8/tests/src/org.assertj/assertj-core/3.22.0/src/test/java/org_assertj/assertj_core/ClassInjectorInnerUsingReflectionInnerDispatcherInnerUsingUnsafeOverrideTest.java:186: error: Dispatcher has protected access in UsingReflection
                    extends ClassInjector.UsingReflection.Dispatcher.UsingUnsafeOverride {
                                                         ^

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2161-4315e9d8/tests/src/org.assertj/assertj-core/3.22.0/build/reports/problems/problems-report.html
/home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2161-4315e9d8/tests/src/org.assertj/assertj-core/3.22.0/src/test/java/org_assertj/assertj_core/ClassInjectorInnerUsingReflectionInnerDispatcherInnerUsingUnsafeOverrideTest.java:191: error: Dispatcher has protected access in UsingReflection
        private static ClassInjector.UsingReflection.Dispatcher.Initializable create() throws Exception {
                                                    ^
/home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2161-4315e9d8/tests/src/org.assertj/assertj-core/3.22.0/src/test/java/org_assertj/assertj_core/ClassInjectorInnerUsingReflectionInnerDispatcherInnerUsingUnsafeOverrideTest.java:33: error: Dispatcher has protected access in UsingReflection
            final ClassInjector.UsingReflection.Dispatcher.Initializable initializable =
                                               ^
/home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2161-4315e9d8/tests/src/org.assertj/assertj-core/3.22.0/src/test/java/org_assertj/assertj_core/ClassInjectorInnerUsingReflectionInnerDispatcherInnerUsingUnsafeOverrideTest.java:38: error: Dispatcher has protected access in UsingReflection
                final ClassInjector.UsingReflection.Dispatcher dispatcher = initializable.initialize();
                                                   ^
/home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2161-4315e9d8/tests/src/org.assertj/assertj-core/3.22.0/src/test/java/org_assertj/assertj_core/ClassInjectorInnerUsingReflectionInnerDispatcherInnerUsingUnsafeOverrideTest.java:192: error: cannot find symbol
            return make();
                   ^
  symbol:   method make()
  location: class UnsafeOverrideAccessor
5 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2161-4315e9d8/tests/src/org.assertj/assertj-core/3.22.0/src/test/java/org_assertj/assertj_core/ClassInjectorInnerUsingReflectionInnerDispatcherInnerUsingUnsafeOverrideTest.java:186: error: Dispatcher has protected access in UsingReflection
                      extends ClassInjector.UsingReflection.Dispatcher.UsingUnsafeOverride {
                                                           ^
  /home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2161-4315e9d8/tests/src/org.assertj/assertj-core/3.22.0/src/test/java/org_assertj/assertj_core/ClassInjectorInnerUsingReflectionInnerDispatcherInnerUsingUnsafeOverrideTest.java:191: error: Dispatcher has protected access in UsingReflection
          private static ClassInjector.UsingReflection.Dispatcher.Initializable create() throws Exception {
                                                      ^
  /home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2161-4315e9d8/tests/src/org.assertj/assertj-core/3.22.0/src/test/java/org_assertj/assertj_core/ClassInjectorInnerUsingReflectionInnerDispatcherInnerUsingUnsafeOverrideTest.java:33: error: Dispatcher has protected access in UsingReflection
              final ClassInjector.UsingReflection.Dispatcher.Initializable initializable =
                                                 ^
  /home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2161-4315e9d8/tests/src/org.assertj/assertj-core/3.22.0/src/test/java/org_assertj/assertj_core/ClassInjectorInnerUsingReflectionInnerDispatcherInnerUsingUnsafeOverrideTest.java:38: error: Dispatcher has protected access in UsingReflection
                  final ClassInjector.UsingReflection.Dispatcher dispatcher = initializable.initialize();
                                                     ^
  /home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2161-4315e9d8/tests/src/org.assertj/assertj-core/3.22.0/src/test/java/org_assertj/assertj_core/ClassInjectorInnerUsingReflectionInnerDispatcherInnerUsingUnsafeOverrideTest.java:192: error: cannot find symbol
              return make();
                     ^
    symbol:   method make()
    location: class UnsafeOverrideAccessor
  5 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

BUILD FAILED in 5s

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
12 actionable tasks: 1 executed, 11 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge8/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2161-4315e9d8/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for org.assertj:assertj-core:3.22.0 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 7s
9 actionable tasks: 1 executed, 8 up-to-date
